manifests/petstorepetservice-deployment-everything-enabled.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-petstorepetservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-petstorepetservice
  template:
    metadata:
      labels:
        app: aks-petstorepetservice
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
        agentpool: mynodepool
      containers:
      - name: petstorepetservice
        image: Stundzepetstorecr.azurecr.io/petstorepetservice:latest
        resources:
          requests:
            cpu: 250m
            memory: 1Gi
          limits:
            cpu: 500m
            memory: 2Gi
        ports:
        - containerPort: 8080
