manifests/petstoreproductservice-deployment-everything-enabled.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-petstoreproductservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-petstoreproductservice
  template:
    metadata:
      labels:
        app: aks-petstoreproductservice
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
        agentpool: mynodepool
      containers:
      - name: petstoreproductservice
        image: stundzepetstorecr.azurecr.io/petstoreproductservice:latest
        resources:
          requests:
            cpu: 250m
            memory: 1Gi
          limits:
            cpu: 500m
            memory: 2Gi
        ports:
        - containerPort: 8080
